# Mikasa

./: .gitignore  CMakeLists.txt  README.md
Src/: CMakeLists.txt  CoreMinimal.h  Mikasa.cpp
Src/Core/: CMakeLists.txt  CoreMinimal.h
Src/Core/Base/: Color.cpp  Color.h  MathUtil.cpp  MathUtil.h
Src/Core/Display/: Display.cpp  Display.h  DisplayManager.h
Src/Core/Render/: RenderManager.cpp  RenderManager.h  RenderSettings.cpp  RenderSettings.h  ShaderProgram.cpp  ShaderProgram.h
Src/Core/Render/Display/: Display.cpp  Display.h
Src/Core/Render/Renderer/: StaticRenderer.cpp
Src/Core/Util/: Color.cpp  Color.h  FileHelper.cpp  FileHelper.h  ModuleUtil.cpp  ModuleUtil.h
Src/Display/: Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h
Src/Main/: CMakeLists.txt  Mikasa.cpp
Src/OpenGL/: CMakeLists.txt  DisplayGL.cpp  DisplayGL.h
Src/Render/: RenderSettings.cpp  RenderSettings.h
Src/Util/: FileHelper.h
