cmake_minimum_required (VERSION 3.8)

project ("Mikasa")

set(MIKASA_PROJECT_DIR ${PROJECT_SOURCE_DIR})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MIKASA_PROJECT_DIR}/Lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MIKASA_PROJECT_DIR}/Lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MIKASA_PROJECT_DIR}/Bin)

if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
    set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
endif()

add_subdirectory(Src)
add_subdirectory(ThirdParty/glfw)
