cmake_minimum_required (VERSION 3.8)

project ("Mikasa")

set(MIKASA_PROJECT_DIR ${PROJECT_SOURCE_DIR})

set(CMAKE_CONFIGURATION_TYPES Debug Release)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${MIKASA_PROJECT_DIR}/Lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${MIKASA_PROJECT_DIR}/Lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${MIKASA_PROJECT_DIR}/Bin)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${MIKASA_PROJECT_DIR}/Lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${MIKASA_PROJECT_DIR}/Lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${MIKASA_PROJECT_DIR}/Bin)

set(CMAKE_DEBUG_POSTFIX _d)

add_subdirectory(Src)
add_subdirectory(ThirdParty/glfw)
add_subdirectory(ThirdParty/glm)
add_subdirectory(ThirdParty/nlohmann)
