set(MIKASA_SOURCE_DIR ${MIKASA_PROJECT_DIR}/Src)
set(MIKASA_LIB_DIR ${MIKASA_PROJECT_DIR}/Lib)
set(MIKASA_THIRD_PARTY_DIR ${MIKASA_PROJECT_DIR}/ThirdParty)
set(MIKASA_CORE_DIR ${MIKASA_SOURCE_DIR}/Core)
set(MIKASA_MAIN_DIR ${MIKASA_SOURCE_DIR}/Main)
set(MIKASA_OPENGL_DIR ${MIKASA_SOURCE_DIR}/OpenGL)

if (MSVC_VERSION GREATER_EQUAL "1900")
    set(MIKASA_MSVC_CPP_17 /std:c++17)
    include(CheckCXXCompilerFlag)
    CHECK_CXX_COMPILER_FLAG(${MIKASA_MSVC_CPP_17} CPP_LATEST_FLAG_SUPPORTED)
    if (${CPP_LATEST_FLAG_SUPPORTED})
        add_compile_options(${MIKASA_MSVC_CPP_17})
    endif()
endif()

add_subdirectory(Core)
add_subdirectory(Main)
add_subdirectory(OpenGL)
